--- a/app/views/ruby_lessons/lessons/lesson_14.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_14.html.erb
@@ -178,7 +178,8 @@ I've been initialized!
 	</p>
 
 <pre><code class="ruby">
-Dog.new(name, breed)
+Dog.new("name", "breed")
+# "name" and "breed" are passed on to the initialize method as arguments
 </code></pre>
 
 	<p>
