--- a/app/views/ruby_lessons/lessons/lesson_18.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_18.html.erb
@@ -159,7 +159,7 @@ Object.superclass
 </p>  
 
 <p>
-  This means that we actually have access to all of the methods inside the <code>Object</code> class and the <code>BasicObject</code> class. You can take a look at all of the methods that all classes have <%= link_to 'in the documentation', 'http://ruby-doc.org/core-2.3.1/Object.html', target: '_blank' %>.
+  <strong>This means that we actually have access to all of the methods inside the <code>Object</code> class and the <code>BasicObject</code> class.</strong> You can take a look at all of the methods that all classes have <%= link_to 'in the documentation', 'http://ruby-doc.org/core-2.3.1/Object.html', target: '_blank' %>.
 </p>
 
 <p>
@@ -173,7 +173,7 @@ Object.superclass
 <h3>Having some fun</h3>
 
 <p>
-  In Ruby, we are actually allowed to rewrite the methods inside any of the default Ruby classes such as <code>Object</code>, <code>String</code>, <code>Array</code>, etc.. Let's say we want to convert <code>"10"</code> into an integer with the <code>to_i</code> method:
+  In Ruby, we are actually allowed to rewrite the methods inside any of the default Ruby classes such as <code>Object</code>, <code>String</code>, <code>Array</code>, etc. Let's say we want to convert <code>"10"</code> into an integer with the <code>to_i</code> method:
 </p>
 
 <pre><code class="ruby">
