--- a/app/views/html_css_lessons/lessons/lesson_14.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_14.html.erb
@@ -5,3 +5,15 @@
 <div class="embed-responsive embed-responsive-16by9">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/wWzsaaDWkJk" frameborder="0" allowfullscreen></iframe>
 </div>
+
+<p>
+  Congratuations on finishing your personal resume page! We would love to see how your page looks:
+</p>  
+
+<ol>
+  <li>Take a screenshot of your web page</li>
+  <li>Upload it <%= link_to 'at this link', 'https://postimage.org/', target: '_blank' %></li>
+  <li>Paste the link to the image below</li>
+</ol>
+
+<% @submission_form = true %>
