--- a/app/views/filmster_lessons/lessons/lesson_18.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_18.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <pre><code class="ruby">
-rails g model reviews user:references movie:references comment:text
+rails g model review user:references movie:references comment:text
 </code></pre>
 
 <div class="well">
@@ -31,7 +31,7 @@ rails g model reviews user:references movie:references comment:text
 
 
 <pre><code class="ruby">
-rails g model reviews user:references movie:references comment:text
+rails g model review user:references movie:references comment:text
 </code></pre>
 
   <p>
