new dashboard message

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,9 @@
+.timely_icon {
+  height:50px;
+  width:50px;
+  margin:10px;
+}
+
 .progress-panel {
   height: 280px;
   background-color: #ffffff;
