new dashboard icon

--- a/app/views/bootstrap_lessons/lessons/lesson_1.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_1.html.erb
@@ -1,22 +1,23 @@
+<p>
+  <strong>Bootstrap is the most popular HTML, CSS, and Javascript framework for creating responsive, mobile-first web sites.</strong> Many websites that you use daily are built with Bootstrap.
+</p>
 
+<h3>Responsive and Mobile-first</h3>
 
 <p>
-  In this lesson, you will be learning the fundamentals of Twitter Bootstrap.
+  In the modern world, many people view web pages using their mobile phones. That means that as developers, we need to be able to design web pages that are optimized for mobile viewing.
+</p>  
+
+<p>
+  <strong>Responsive</strong> means that the layout and design of the web page will respond to the device and the screen width. For example, try shrinking and maximizing the width of this web page. You'll notice that several elements change their sizes. Web pages need to be responsive in order to create appealing interfaces for all screen sizes.
 </p>
 
 <p>
-  We're going to be making a mock landing page that's going to look good without us being designers. We're going to accomplish that using <strong>Twitter Bootstrap</strong>.
-</p>
+  <strong>Mobile-first</strong> means that when you design the page, you design the mobile view first. Once you have designed how it looks on mobile, then you go on to design the web based view.
+</p>  
+
+<h3>Why Use Bootstrap?</h3>
 
 <p>
-  <strong>Bootstrap is a front end framework that allows developers who don't know anything at all about design, to create websites that look good easily.</strong>
+  Bootstrap provides developers with easy to use CSS elements to create responsive, mobile-first websites. Instead of creating the elements yourself, bootstrap allows you to easily implement or extend the elements.
 </p>
-
-<p>
-  In order to see how Bootstrap works, let's go ahead and start building a website.
-</p>
-
-
-
-
-
