--- a/app/views/bootstrap_lessons/lessons/lesson_3.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_3.html.erb
@@ -5,7 +5,15 @@
 </p>
 
 <p>
-  Let's go to the bootstrap website (quickly search "bootstrap" in your web browser) and let's click on "Components". We see a bunch of cool icons, we see some navbars, we see a bunch of cool stuff that we can use in our websites. This is looking awesome. Let's begin by adding a navbar to our site.
+  Let's go to the bootstrap website click on "Components".
+</p>
+
+<p class="standard_git_workflow">
+  Take a second to look around to see what you can do with Bootstrap.
+</p>
+
+<p>
+   We see a bunch of cool icons, we see some navbars, we see a bunch of cool stuff that we can use in our websites. This is looking awesome. Let's begin by adding a navbar to our site.
 </p>
 
 <p>
