--- a/app/views/bootstrap_lessons/lessons/lesson_2.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_2.html.erb
@@ -1,15 +1,15 @@
 
 
 <p>
-  Awesome, let's get going.
+  Let's get started.
 </p>
 
 <p>
-  Let's make a new project folder. I'm going to create a new folder in my Documents called <code>Landing Page Mock</code> and that's where I'm going to save my file. You can call your folder whatever you like, but make sure you save everything in that folder.
+  Let's make a new project folder. Create a new folder in <code>/Documents</code> called <code>landing_page</code>. We are going save all of our files for this project in this folder.
 </p>
 
 <p>
-  Let's then open up Sublime and open a new file (Shortcut: <code>Command + N</code> for Mac, <code>Control + N</code> for Windows) and save this file as <code>index.html</code>. Let's also make sure to save this file in your folder that you just created, so for me I'm making sure I save it in the folder called <code>Landing Page Mock</code>.
+  Let's then open up Sublime and open a new file (Shortcut: <code>Command + N</code> for Mac, <code>Control + N</code> for Windows). Save this file as <code>index.html</code> inside the <code>landing_page</code> folder we just created.
 </p>
 
 <p>
@@ -50,21 +50,34 @@
 
 </code></pre>
 
-<p>
-  Save the file and right click in Sublime Text. Select "Open in Browser" and check to see if the page says "Hello".
-</p>
+<ol>
+  <li>Save the file</li>
+  <li>Right click inside Sublime Text</li>
+  <li>Click "Open in Browser"</li>
+  <li>Check that the page displays "Hello"</li>
+</ol>
+
+<h3>Adding Bootstrap</h3>
 
 <p>
-  Now we're going to get to the fun part. Let's add some bootstrap magic to our page. In order to do that, let's go to our web browser and search for "bootstrap" and go to the first search result. Then let's navigate to the "Getting Started" page, which should be on the top navigation bar on Bootstrap's website. If you can't find it, the trick is to hit <code>Command + F</code> if you're on a Mac or <code>Control + F</code> if you're on a Windows and search for "Getting Started".
+  Now we're going to get to the fun part. Let's add some bootstrap to our page. 
 </p>
 
-<%= create_flashcard %>
+<ol>
+  <li>Search for "bootstrap" on Google</li>
+  <li>Go to the first search result</li>
+  <li>Go to the "Getting Started" page</li>
+</ol>
 
 <p>
-  If we scroll down on this page, the first thing it says is something about a Bootstrap CDN. <strong>CDN stands for Content Delivery Network, and it basically provides developers with a bunch of files without having to download them into your computer or server.</strong> So in our case, instead of manually downloading Bootstrap's CSS and JavaScript files and adding them into our site, <strong>we can simply just copy and paste this little code that they have for us</strong>, and we'd have access to the Bootstrap CSS/JavaScript files. Pretty awesome right?
+  If we scroll down on this page, the first thing it says is something about a Bootstrap CDN.
 </p>
 
-<%= create_flashcard %>
+<h3>What is a CDN?</h3>
+
+<p>
+  <strong>CDN stands for Content Delivery Network, and it basically provides developers with a bunch of files without having to download them into your computer or server.</strong> Instead of manually downloading Bootstrap's CSS and JavaScript files and adding them into our site, <strong>we can simply just copy and paste this little code that they have for us</strong>, and we'd have access to the Bootstrap CSS/JavaScript files.
+</p>
 
 <p>
   Let's go ahead and add the Bootstrap CDN files into our head section of our HTML.
