add random quote

--- a/app/views/ruby_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_8.html.erb
@@ -389,6 +389,8 @@ puts "....."
 puts "Generating random quote......"
 puts "....."
 
+random_quote = quotes.sample
+
 puts "Random quote at index #{quotes.index(random_quote)}: #{random_quote}"
 </code></pre>
 
