--- a/app/views/ruby_lessons/lessons/lesson_16.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_16.html.erb
@@ -191,8 +191,8 @@ cat.age = 5
 
 puts "After: " + cat.inspect
 
-puts "Name: " + cat.name
-puts "Age: " + cat.age
+puts "Name: #{cat.name}"
+puts "Age: #{cat.age}"
 </code></pre>
 
 <p>
