--- a/app/views/filmster_lessons/lessons/lesson_14.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_14.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <p>
-  Create a new Javascript file called <code>main.js</code> inside of the <code>app/javascripts</code> directory.
+  Create a new Javascript file called <code>main.js</code> inside of the <code>app/assets/javascripts</code> directory.
 </p>
 
 <p>
