add algorithm course

--- a/app/assets/stylesheets/track.scss
+++ b/app/assets/stylesheets/track.scss
@@ -44,9 +44,7 @@
 
   .btn-track {
     font-weight: 600;
-    position: absolute;
-    right: 20px;
-    bottom: 10px;
+    margin-bottom: 15px;
   }
 
   &:hover {
