--- a/app/views/algorithm_lessons/lessons/lesson_1.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_1.html.erb
@@ -1,5 +1,5 @@
 <p>
-  As a software engineer trying to apply for the top engineering teams, you need to have some basic knowledge of data structures and algorithms.
+  As a software engineer trying to apply for the top engineering teams, you need to have some basic knowledge of data structures and algorithms. Computer science students study these data structures and algorithms intensely. We'll try to equip you with the necessary knowledge and skills to be able to implement these data structures and algorithms.
 </p>
 
 <p>
@@ -13,6 +13,10 @@
 <p>
   <strong>Top companies are looking for effective problem solvers.</strong> Technical interviews that test your knowledge on data structures and algorithms is common, since a level of problem solving skills are necessary to solve these challenges.
 </p>
+
+<p>
+  Companies won't value developers who only know syntax - you have to be good at thinking through problems and working your way to the solutions. The following challenges will train you to do so.
+</p>  
 
 <p>
   Get ready to practice some data structures and algorithms!
