--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -154,7 +154,7 @@ end
     <li>Rails looks at the routing to see which controller action to trigger</li>
     <li>The <code>index</code> action in <code>ideas_controller.rb</code> is triggered</li>
     <li>Rails tries to find an <code>html</code> file that is named <code>index</code> in the <code>views/ideas</code> directory</li>
-    <li>Rails finds the <code>idea.html.erb</code> file</li>
+    <li>Rails finds the <code>index.html.erb</code> file</li>
     <li>Rails displays the file</li>
   </ul>
 
