revise lesson link

--- a/app/views/filmster_lessons/lessons/lesson_26.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_26.html.erb
@@ -7,7 +7,7 @@
   <li>Skim through the <%= link_to 'ActionMailer documentation', 'http://guides.rubyonrails.org/action_mailer_basics.html', target: '_blank' %></li>
   <li>Send an email to a user everytime the user is followed</li>
   <ul>
-    <li><%= link_to 'This tutorial', 'https://github.com/carrierwaveuploader/carrierwave/wiki/how-to:-specify-the-image-quality', target: "_blank" %> is an awesome place to get started</li>
+    <li><%= link_to 'This tutorial', 'https://launchschool.com/blog/handling-emails-in-rails', target: "_blank" %> is an awesome place to get started</li>
   </ul>
 </ul>
 
