--- a/app/views/ruby_lessons/lessons/lesson_6.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_6.html.erb
@@ -70,33 +70,33 @@ ruby string.rb
 
 <pre><code class="irb">
 # Makes all letters uppercase
-"this is a string".upcase
+puts "this is a string".upcase
 
 # Makes all letters lowercase
-"THIS IS A STRING".downcase
+puts "THIS IS A STRING".downcase
 
 # Get length of string
-"this is a string".length
+puts "this is a string".length
 
 # Reverse string
-"this is a string".reverse
+puts "this is a string".reverse
 
 # Capitalize first letter
-"this is a string".capitalize
+puts "this is a string".capitalize
 
 # Check if string exists within string
-"this is a string".include?("ri")
+puts "this is a string".include?("ri")
 
-"this is a string".include?("jy")
+puts "this is a string".include?("jy")
 
 # Split string into an array of individual characters
-"this is a string".split("")
+puts "this is a string".split("")
 
 # Convert string into integer
-"10".to_i
+puts "10".to_i
 
 # Convert string into float
-"10".to_f
+puts "10".to_f
 </code></pre>
 
 <p>
