--- a/app/views/algorithm_lessons/lessons/lesson_4.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_4.html.erb
@@ -9,7 +9,7 @@
 	</p>
 
 	<p>
-		When people hear the sentence "develop an algorithm", a lot of people tend to derive solutions that are extremely slow. On the other hand, a lot of people can think of much faster solutions when solving them by hand.
+		When people hear the sentence "develop an algorithm", <strong>a lot of people tend to derive solutions that are extremely slow</strong>. On the other hand, a lot of people can think of much faster solutions when solving them by hand.
 	</p>
 
 	<p>
