change private method section

--- a/app/views/instapost_lessons/lessons/lesson_14.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_14.html.erb
@@ -64,110 +64,9 @@ end
   Notice how <code>post_params</code> is under <code>private</code>. Putting this <code>private</code> keyword means that the code below it is a <strong>private method</strong>.
 </p>
 
-<div class="well">
-  <h3>What's a private method?</h3>
-
-  <p>
-    <strong>Private methods</strong> are methods that can only be accessed inside the class. For example, let's say we have a <code>BankAccount</code> class.
-  </p>
-
-<pre><code class="ruby">
-# bankaccount.rb
-class BankAccount
-  attr_reader :amount
-
-  def initialize(amount)
-    @amount = amount
-  end
-
-  def balance
-    puts @amount
-  end
-
-  private
-
-  def double_balance!
-    @amount *= 2
-  end
-end
-</code></pre>
-
-  <p>
-    We can see that we can initialize the <code>BankAccount</code> with an initial amount. We have a <code>balance</code> method that <code>puts</code> the <code>amount</code> that the <code>BankAccount</code> holds. Then, we have a <code>double_balance!</code> method that is <code>private</code>. This method doubles the amount in the bank account. Let's try this out:
-  </p>
-
-<pre><code class="ruby">
-my_bank = BankAccount.new(2000)
-my_bank.balance
-=> 2000
-my_bank.double_balance!
-=> NoMethodError: private method `double_balance' called for #&lt;BankAccount:0xxxxxxxxxx @amount=2000&gt;
-</code></pre>
-
-  <p>
-    Notice how calling the <code>double_balance!</code> gave us an error. This is because <code>private</code> methods can only be called inside of the class. Let's see how we can actually call the <code>double_balance</code> method:
-  </p>
-
-<pre><code class="ruby">
-# bankaccount.rb
-class BankAccount
-  attr_reader :amount
-
-  def initialize(amount)
-    @amount = amount
-  end
-
-  def balance
-    puts @amount
-    double_balance!
-    puts @amount
-  end
-
-  private
-
-  def double_balance
-    @amount *= 2
-  end
-end
-</code></pre>
-
-  <p>
-    What we did here is call the <code>double_balance!</code> method inside the <code>balance</code> method. We also <code>puts</code> the <code>amount</code> before and after calling <code>double_balance!</code> to see how calling it affected the <code>amount</code>. Let's try this out:
-  </p>
-
-<pre><code class="ruby">
-my_bank = BankAccount.new(2000)
-my_bank.balance
-=> 2000
-4000
-my_bank.double_balance!
-=> NoMethodError: private method `double_balance!' called for #&lt;BankAccount:0xxxxxxxxxx @amount=2000&gt;
-</code></pre>
-  
-  <p>
-    As you can see, the <code>amount</code> was indeed doubled when we called the <code>balance</code> method! However, when we tried calling <code>double_balance!</code> method outside the class in the terminal, it didn't work.
-  </p>
-
-  <h3>So why and when do we use private methods?</h3>
-
-  <p>
-    In Ruby on Rails, private methods are usually seen in controllers and models, like we just saw in our <code>posts_controller.rb</code>. <strong>We do this when we don't want other users from accessing the method for security reasons.</strong>
-  </p>
-
-  <p>
-    For example, in our <code>BankAccount</code> example, we don't want users to be able to access the <code>double_balance!</code> method. If they were able to, everyone would be doubling their balance! 
-  </p>
-
-  <p>
-    Instead, we want this to be a method that can <strong>only be called internally inside our program</strong>. That's why in this we want to make the method <code>private</code> and prevent normal users from accessing it.
-  </p>
-
-  
-
-</div>
-
-  
-
+<p class="standard_git_workflow">
+  Refer back to <%= link_to 'this lesson', "/ruby_lessons/17", target: '_blank' %> to review public and private interfaces.
+</p>
 
 <p>
   The code after that is pretty straightforward. If <code>@posts</code> is valid (meaning it passes all validations), then it redirects to the <code>root_path</code>, otherwise it renders the <code>new</code> template again with an error message.
