--- a/app/views/instapost_lessons/lessons/lesson_20.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_20.html.erb
@@ -120,7 +120,7 @@ current_user.comments.where(post_id: 322)
 </p>
 
 <p class="alert alert-warning">
-  Again, as a side note, <code>@post.comments</code> automatically queries for <code>Comment</code>s that belong to the <code>current_user</code>.
+  Again, as a side note, <code>@post.comments</code> automatically queries for <code>Comment</code>s that belong to the <code>@post</code>.
 </p>
 
 <p>
